# uws

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTIC_SOVEREIGNTY_FULFILLED.md  AGENTS.md  ALUMINUM.md  ALUMINUM_OS_V1_ARCHITECTURE.md  ALUMINUM_OS_WHITEPAPER.md  CITATION.cff  CLAUDE.md  CLAUDE_MIRACLES_FULFILLED.md  CONSTITUTIONAL_WISHLIST_FULFILLED.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPILOT_CLI_SPEC.md  COPILOT_HORIZON_MANIFEST.md  COPILOT_INTEGRATION_GUIDE.md  Cargo.toml  Dockerfile  FEATURE_MANIFEST.md  FUSION_ENGINE.md  GEMINI_SYNTHESIS.md  GOOGLE_WISHLIST_FULFILLED.md  GOVERNANCE.md  GPT_WISHLIST_FULFILLED.md  GROK_REVIEW.md  GROK_WISHLIST_FULFILLED.md  MICROSOFT_WISHLIST_FULFILLED.md  Makefile  README.md  SECURITY.md  SUPPORT.md  _typos.toml  action.yml  bootstrap.sh  claude_anthropic_wishlist.md  codecov.yml  constitutional_wishlist_analysis.md  copilot-extension.json  (+20 more)
.cargo/: config.toml
.changeset/: flatpath-fallback.md  github-ecosystem-batch-2.md  github-ecosystem-integrations.md  github-provider-and-adoption.md  janus-v2-universal-module-wiring.md  rapid-adoption-improvements.md  uws-rapid-adoption.md
.claude/: CONTEXT_CHECKPOINT.md
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  release.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  provider_request.yml
.github/workflows/: assign.yml  audit.yml  auto-milestone.yml  bench.yml  cherry-pick.yml  ci.yml  codeql.yml  contributors.yml  dependency-review.yml  docker.yml  draft-release.yml  greet.yml  kintsugi-weave.yml  links.yml  lock.yml  msrv.yml  needs-info.yml  (+10 more)
RECRUITMENT/: CONTRIBUTE_TO_ALUMINUM_OS.md
benches/: README.md
bridge/: CHROMIUM_BRIDGE.md
docs/: ALEXANDRIA_CLI_SPEC.md  ECOSYSTEM_CLI_MAP.md  IMPLEMENTATION_ROADMAP.md  MASTER_REFERENCE.md  REGENERATIVE_IP_MANIFESTO.md  UWS_PLUGIN_COMMANDS.md  VERIFICATION_PROTOCOL.md  index.md  invariant_distribution_table.md  janus_checkpoint_2026-03-20.md  session_log_2026-03-20.md
gh-extension/: gh-uws
ingestion/: 144_sphere_ontology_full.md  master_ingestion.json  verified_ontology.md
insights/: house_01_formal_sciences_576_insights.md
janus/: BOOT_SEQUENCE.md  HEARTBEAT_PROMPT.md  JANUS_BOOT_SEQUENCE.md  JANUS_CHECKPOINT_V2_SPEC.md  JANUS_HEARTBEAT_PROMPT.md  JANUS_POINTER_MAP.md  JANUS_V2_SPEC.md  janus_config.yaml
lattice-protocol/: LICENSE  METHODOLOGY.md  README.md  WHITE_PAPER_v10.0.md
linkedin-profile-builder/: CHANGELOG.md  CONTRIBUTING.md  README.md
mcp_server/: README.md  capability_audit.py  mcp.json  server.py
src/: activity_stream.rs  agentic_sovereignty.rs  android_chrome.rs  apple.rs  audit_chain.rs  auth.rs  auth_commands.rs  claude_miracles.rs  cognitive_dust.rs  commands.rs  constitutional_engine.rs  context_compressor.rs  council_github_client.rs  credential_store.rs  cross_search.rs  data_lineage.rs  diff_engine.rs  executor.rs  figma_provider.rs  frictionless_cal.rs  fs_util.rs  fusion_engine.rs  generate_skills.rs  github_provider.rs  gpt_pantheon.rs  grok_bazinga.rs  janus.rs  lib.rs  linear_provider.rs  local_noosphere.rs  main.rs  mcp_server.rs  ms_graph.rs  notion_provider.rs  omni_substrate.rs  persona_manager.rs  prompt_vault.rs  provider_health.rs  royalty_observability.rs  royalty_weight.rs  (+12 more)
tests/: test_integration_governance.py
toolchain/: acp_governance.py  graphiti_temporal.py  health_connectors.py  invariant_linter.py  invariants_registry.py  janus_runner.py  kintsugi_healer.py  manus_sphere_adapter.py  opa_rego_engine.py  pqc_provider.py  predictive_fix_engine.py  provenance.py  provenance_trailer.py  spheres_pipeline.py  stress_test.py  swarm_review.py  test_janus.py  test_provenance.py  zero_trust_registry.py
whitepaper/: ALUMINUM_OS_WHITEPAPER.md
(+105 files in other folders)
