[package]
name = "uws"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Dave Sheldon <splitmerge420@gmail.com>"]
description = "Universal Workspace CLI — Constitutional operating system for AI-augmented life"
license = "MIT"
repository = "https://github.com/splitmerge420/uws"
readme = "README.md"

[lib]
name = "uws"
path = "src/lib.rs"

[[bin]]
name = "uws"
path = "src/main.rs"

[features]
default = ["std"]
std = ["dep:serde"]

[dependencies]
# constitutional_engine.rs and universal_io.rs use serde behind cfg(feature = "std")
serde = { version = "1", features = ["derive"], optional = true }

# Phase 2 (uncomment when ready):
# sha3 = "0.10"              # Replace FNV-1a with real SHA3-256 in audit_chain.rs
# serde_json = "1"           # JSON export for audit chain
# reqwest = { version = "0.12", features = ["json"] }  # GitHub API calls
# tokio = { version = "1", features = ["full"] }        # Async runtime
# clap = { version = "4", features = ["derive"] }       # CLI argument parsing

[dev-dependencies]
# Tests use only std for now

[profile.release]
opt-level = 3
lto = true
strip = true