[package]
name = "uws"
version = "0.1.0"
edition = "2021"
authors = ["Dave Sheldon <splitmerge420@gmail.com>"]
description = "Universal Workspace CLI — Constitutional operating system for AI-augmented life"
license = "MIT"
repository = "https://github.com/splitmerge420/uws"
readme = "README.md"

[lib]
name = "uws"
path = "src/lib.rs"

[[bin]]
name = "uws"
path = "src/main.rs"

[features]
default = ["std"]
std = []

[dependencies]
# Core serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"

# CLI argument parsing
clap = { version = "~4.5", features = ["derive", "string"] }

# Environment
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Cryptography & credentials
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# Session identity
uuid = { version = "1", features = ["v4"] }

# Secure credential storage
keyring = "3"

# TUI setup wizard
crossterm = "0.29"
ratatui = "0.30"

# Google OAuth2
yup-oauth2 = "12"
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
percent-encoding = "2"

# Platform directories
dirs = "5"

# Builder pattern derive macro
derive_builder = "0.20"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true