[package]
name = "uws"
version = "0.1.0"
edition = "2021"
authors = ["Dave Sheldon <splitmerge420@gmail.com>"]
description = "Universal Workspace CLI — Constitutional operating system for AI-augmented life"
license = "MIT"
repository = "https://github.com/splitmerge420/uws"
readme = "README.md"

[lib]
name = "uws"
path = "src/lib.rs"

[[bin]]
name = "uws"
path = "src/main.rs"

[features]
default = ["std"]
std = ["dep:serde"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"

# Async runtime & networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Cryptography & secrets
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"

# TUI
crossterm = "0.29"
ratatui = "0.30"

# Utilities
chrono = "0.4"
dirs = "5"
dotenvy = "0.15"
percent-encoding = "2"
derive_builder = "0.20"
serde_yaml = "0.9"
yup-oauth2 = "12"

[dev-dependencies]
# Tests use only std for now

[profile.release]
opt-level = 3
lto = true
strip = true